# julia

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
src/: frag.cpp  frag.glsl  main.cpp  shader.h  vert.glsl
